--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</li>
           <li class="nav-item mx-2"><a class="nav-link navbar-brand mr-0 text-white" href="index.html"><b>SALMON ARCH</b></a></li>
           <li class="nav-item mx-2"><a class="nav-link" href="clients.html">Clients</a></li>
-          <li class="nav-item mx-2"><a class="nav-link" href="blogs.html">Blogs</a></li>
+          <li class="nav-item mx-2"><a class="nav-link" href="blogs2.html">Blogs</a></li>
         </ul>
       </div>
     </div>
