--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			
 			</li>
           <li class="nav-item mx-2"><a class="nav-link navbar-brand mr-0 text-white" href="index.html"><b>SALMON ARCH</b></a></li>
-          <li class="nav-item mx-2"><a class="nav-link" href="clients.html">Clients</a></li>
+          <li class="nav-item mx-2"><a class="nav-link" href="clients2.html">Clients</a></li>
           <li class="nav-item mx-2"><a class="nav-link" href="blogs2.html">Blogs</a></li>
         </ul>
       </div>
