--- a/blog22.html
+++ b/blog22.html
@@ -50,13 +50,13 @@
  <li class="nav-item mx-2 dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a> 
 			  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown1"> 
 				  <a class="dropdown-item" href="services.html">All Courses</a> 
-				  <a class="dropdown-item" href="services.revit.html">Autodesk Revit Course</a> 
-				  <a class="dropdown-item" href="services.photoshop.html">Photoshop Course</a> 
-				  <a class="dropdown-item" href="services.14days.html">Project Support</a> 
+				  <a class="dropdown-item" href="services.revit2.html">Autodesk Revit Course</a> 
+				  <a class="dropdown-item" href="services.photoshop2.html">Photoshop Course</a> 
+				  <a class="dropdown-item" href="services.14days2.html">Project Support</a> 
 				   </div> </li>
 			<li class="nav-item mx-2"><a class="nav-link navbar-brand mr-0 text-white" href="index.html"><b>SALMON ARCH</b></a></li>
-          <li class="nav-item mx-2"><a class="nav-link" href="clients.html">Clients</a></li>
-          <li class="nav-item mx-2"><a class="nav-link" href="blogs.html">Blogs</a></li>
+          <li class="nav-item mx-2"><a class="nav-link" href="clients2.html">Clients</a></li>
+          <li class="nav-item mx-2"><a class="nav-link" href="blogs2.html">Blogs</a></li>
         </ul>
       </div>
     </div>
